--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -6,3 +6,4 @@ parsley_version = maven(com.github.j-mie6, parsley_2.13, stable)
 scalatest_version = maven(org.scalatest, scalatest_2.13, stable)
 sbtassembly_version = maven(com.eed3si9n, sbt-assembly, stable)
 sbtgit_version = maven(com.github.sbt, sbt-git, stable)
+$dependencyupdate_version = maven(org.jmotor.sbt, sbt-dependency-updates, stable)
